# academicmcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/academic_mcp/: server.py
src/academic_mcp/clients/: arxiv_client.py  base.py  crossref.py  dblp.py  openalex.py  semantic.py
src/academix/: __init__.py  aggregator.py  bibtex.py  cache.py  models.py  server.py
src/academix/clients/: __init__.py  arxiv_client.py  base.py  crossref.py  dblp.py  openalex.py  semantic.py
src/academix/tools/: __init__.py
tests/: __init__.py  conftest.py  test_bibtex.py  test_cache.py  test_models.py
tests/test_clients/: test_integration.py
