[project]
name = "academix"
version = "0.1.0"
description = "MCP server for academic paper search, analysis, and BibTeX retrieval"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Academic MCP Team" }
]
keywords = ["mcp", "academic", "papers", "bibtex", "arxiv", "semantic-scholar", "openalex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "cachetools>=5.3.0",
    "arxiv>=2.1.0",
    "bibtexparser>=2.0.0b7",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest-cov>=4.0.0",
    "types-cachetools>=6.2.0.20251022",
]

[project.scripts]
academix = "academix.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/academix"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as hitting real external APIs (deselect with -m 'not integration')",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
